# centralized-lock-system

./: .gitignore  sdkconfig
components/wifi/: CMakeLists.txt  Kconfig.projbuild  socket.c  task_establish_connection.c  wifi.c
controller/: CMakeLists.txt  sdkconfig
controller/common/: gpio_map.h  types.h
controller/components/wifi/: CMakeLists.txt  Kconfig.projbuild  tcp_client.c  wifi.c  wifi_client.c  wifi_status.c
controller/components/wifi/include/: tcp_client.h  wifi_client.h  wifi_conifg.h  wifi_status.h
controller/components/wifi/include/tasks/: task_connection_watcher.h  task_tcp_client.h  task_wifi_client.h
controller/components/wifi/include/wifi_socket/: wifi_socket.h
controller/components/wifi/include/wifi_tls/: wifi_tls.h
controller/components/wifi/src/: wifi.c  wifi_client.c
controller/components/wifi/src/wifi_tls/: wifi_tls.c
controller/components/wifi/tasks/: task_connection_watcher.c  task_wifi_client.c
controller/components/wifi/wifi_socket/: wifi_socket.c
controller/components/wifi/wifi_tls/: wifi_tls.c
controller/main/: CMakeLists.txt  Kconfig.projbuild  main.c
docs/: README.md  bibliography.bib  build.bat  build.sh  document.tex  mystyle.sty
docs/abstract/: abstract.tex
docs/appendices/: appendix1.tex
docs/chapters/: conclusions.tex  controller.tex  glossary.tex  high-level-architecture.tex  implementation.tex  introduction.tex  problem-domain.tex  results.tex  server.tex
main/: main.c
management/app/: acs.db  app.py
management/gui/: README.md  (+3 more)
server/: create_database.py  server.py  test_database.py
(+104 files in other folders)
