idf_component_register(
    SRCS
        "src/tasks/task_wifi_client.c"
        "src/wifi_client.c"
        "src/wifi.c"
        "src/wifi_socket/wifi_socket.c"
        "src/wifi_tls/wifi_tls.c"
    INCLUDE_DIRS
        "include/"
        "../../common/"
        "../flow_controller/include/"
    EMBED_TXTFILES
        ca.cer
        client.cer
        client.key
    REQUIRES
        esp-tls
        flow_controller
)
